# makesphere

./: .gitignore  Makefile  README.md  archive.html  conf.py  deploy.sh  index.html  pyproject.toml  rss.xml  sitemap.xml  sitemapindex.xml
.github/workflows/: nikola-blog-publish.yml
categories/: index.html
posts/nginx-redirects-management/: index.html  index.md
